--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Formulário de Pesquisa</title>
         <link rel="stylesheet" href="assets/css/index_style.css">
         <link rel="stylesheet" href="assets/css/style_responsiveness.css">
+        <link rel="shortcut icon" href="assets/icons/favicon.jpg">
 
     </head>
 
