--- a/validation.html
+++ b/validation.html
@@ -6,6 +6,7 @@
         <title>Validação</title>
         <link rel="stylesheet" href="assets/css/validation_style.css">
         <link rel="stylesheet" href="assets/css/style_responsiveness.css">
+        <link rel="shortcut icon" href="assets/icons/favicon.jpg">
 
     </head>
 
