Add Netlify form.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
         <div class="container">
 
-            <form action="validation.html" method="GET">
+            <!-- <form action="validation.html" method="GET"> -->
+                <form method="post" name="dados" netlify>
                 <div class="name">
                     Nome
                     <br>
