Revert "Add Netlify form."
This reverts commit 9b96dfad691e92431ae096713f271dfc38bbbe03.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
         <div class="container">
 
-            <!-- <form action="validation.html" method="GET"> -->
-                <form method="post" name="dados" netlify>
+            <form action="validation.html" method="GET">
                 <div class="name">
                     Nome
                     <br>
